sandbox/output
MedicineClash.java:19: error: cannot find symbol
        if (customers.medicines.size() < 2) {
                     ^
  symbol:   variable medicines
  location: variable customers of type List<Customer>
1 error
